--- a/checkboxeradio.html
+++ b/checkboxeradio.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkbox e radio</title>
 </head>
-
 <body>
-    <form method="get">
-        <h3>Voê selecionou: Pizza de Calabresa</h3>
-        <p> Quais Opcionais você deseja</p>
-        <input type="checkbox" name="opicional[]" value="queijo"> + queijo<br>
-        <input type="checkbox" name="opicional[]" value="queijo"> + calabresa<br>
-        <input type="checkbox" name="opicional[]" value="queijo"> + cebola<br>
-        <input type="checkbox" name="opicional[]" value="queijo"> + azeitona<br>
-        <p> Borada recheada:</p>
-        <input type="radio" name="borda" value="sim">Sim<br>
-        <input type="radio" name="borda" value="sim">Não<br>
+    <form method="post">
+        <h3>Você selecionou: Pizza de Calabresa</h3>
+        <p>Quais Opcionais você deseja:</p>  
+
+        <label><input type="checkbox" name="opicional[]" value="queijo">Queijo</label><br>
+        <label><input type="checkbox" name="opicional[]" value="calabresa">Calabresa</label><br>
+        <label><input type="checkbox" name="opicional[]" value="cebola">Cebola</label><br>
+        <label><input type="checkbox" name="opicional[]" value="azeitona">Azeitona</label><br>
+
+        <p>Borda recheada:</p>
+        <label><input type="radio" name="borda" value="sim"> Sim</label><br>
+        <label><input type="radio" name="borda" value="nao"> Não</label><br>
+
         <p>Bebida:</p>
-        <input type="radio" name="bebida" value="Suco">Suco<br>
-        <input type="radio" name="bebida" value="Refrigerante">Refrigerante<br>
-        <input type="radio" name="bebida" value="Agua">Agua<br>
-        <input type="radio" name="bebida" value="nenhum">Nenhum<br>
+        <label><input type="radio" name="bebida" value="suco"> Suco</label><br>
+        <label><input type="radio" name="bebida" value="refrigerante"> Refrigerante</label><br>
+        <label><input type="radio" name="bebida" value="agua"> Água</label><br>
+        <label><input type="radio" name="bebida" value="nenhum"> Nenhum</label><br>
 
         <button type="submit">Enviar pedido</button>
     </form>
 </body>
-
 </html>
