criação de input

--- a/button.html
+++ b/button.html
@@ -6,7 +6,7 @@
     <title>Button</title>
 </head>
 <body>
-     <!-- o autocomplete completa as onformações do formulario--> 
+     <!-- o autocomplete completa as informações do formulario--> 
      <!-- O action e para inserir a url que o formulario sera inserida--> 
      <!-- O onsubmit ele respeita o botão enviar  e coloca como campo obrigatorio--> 
 
