--- a/checkboxeradio.html
+++ b/checkboxeradio.html
@@ -10,6 +10,8 @@
         <h3>Você selecionou: Pizza de Calabresa</h3>
         <p>Quais Opcionais você deseja:</p>  
 
+        <!-- O "opicional[]" para se tornar uma lista, sem eles o banco de dados vai ler soment e o ultimo selecionado-->
+        <!-- O checbox caixinha com check-->
         <label><input type="checkbox" name="opicional[]" value="queijo">Queijo</label><br>
         <label><input type="checkbox" name="opicional[]" value="calabresa">Calabresa</label><br>
         <label><input type="checkbox" name="opicional[]" value="cebola">Cebola</label><br>
@@ -18,7 +20,7 @@
         <p>Borda recheada:</p>
         <label><input type="radio" name="borda" value="sim"> Sim</label><br>
         <label><input type="radio" name="borda" value="nao"> Não</label><br>
-
+        <!-- O radio formato redondo com check-->      
         <p>Bebida:</p>
         <label><input type="radio" name="bebida" value="suco"> Suco</label><br>
         <label><input type="radio" name="bebida" value="refrigerante"> Refrigerante</label><br>
