--- a/tagsform.html
+++ b/tagsform.html
@@ -6,6 +6,10 @@
     <title>Formulario de cadastro</title>
 </head>
 <body>
+     <!-- o autocomplete completa as onformações do formulario--> 
+     <!-- O action e para inserir a url que o formulario sera inserida--> 
+     <!-- O onsubmit ele respeita o botão enviar  e coloca como campo obrigatorio--> 
+
     <form name="signup" autocomplete="on" method="post" action="#">
        
        Nome: <input type="text" id="name" name="name" placeholder="Inserir o nome"><br>
@@ -13,6 +17,9 @@
        Idade: <input type="number" id="age" name="age" placeholder="Inserir a idade"><br>
 
        Senha: <input type="password" id="password" name="password" placeholder="Inserir a senha"><br>
+
+       
+        <!-- O botão submit e para enviar relatorio-->
 
         <button type="submit">Enviar</button>
     </form>
